--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
     color: blue;
     display: flex;
     padding: 24px 0;
-
-
-.section1{
-background-color: aquamarine;
 }
 
+.section1{
+background-color: rgb(127, 146, 255);
+}
 
-
+.patinho
+     background: blue
