--- a/style.css
+++ b/style.css
@@ -11,4 +11,19 @@ background-color: rgb(127, 146, 255);
 
 .patinho{
     background-color: black;
+padding: 100px;
 }
+.cabecalho {
+    width: 20%;
+}
+. rodar{
+     background-color: brown; 
+     padding: 20px;
+}
+
+.rodar{
+    background-color: blue;
+color: black;
+}
+
+
